tests/snapshots/snapshots__budget_vaul_src_500.snap
---
source: tests/snapshots.rs
expression: output
---
budget: 500 (510 words)

constants.ts
     1→export const TRANSITIONS = {
     2→  DURATION: 0.5,
      →…
     6→export const VELOCITY_THRESHOLD = 0.4;
     8→export const CLOSE_THRESHOLD = 0.25;
    10→export const SCROLL_LOCK_TIMEOUT = 100;
    12→export const BORDER_RADIUS = 8;
    14→export const NESTED_DISPLACEMENT = 16;
    16→export const WINDOW_TOP_OFFSET = 26;
    18→export const DRAG_CLASS = 'vaul-dragging';
context.ts
     4→interface DrawerContextValue {
     5→  drawerRef: React.RefObject<HTMLDivElement>;
     6→  overlayRef: React.RefObject<HTMLDivElement>;
      →…
    37→export const DrawerContext = React.createContext<DrawerContextValue>({
    38→  drawerRef: { current: null },
      →…
helpers.ts
     3→interface Style {
     4→  [key: string]: string;
     5→}
     7→const cache …
   105→/**
   106→ * Receives functions as arguments and returns a new function that calls all.
   107→ */
   108→export function chain<T>(...fns: T[]) {
   109→  return (...args: T extends AnyFunction ? Parameters<T> : never) => {
   110→    for (const fn of fns) {
   111→      if (typeof fn === 'function') {
   112→        // @ts-ignore
   113→        fn(...args);
   114→      }
   115→    }
      →…
index.tsx
    27→export interface WithFadeFromProps {
    28→  /**
      →…
    40→export interface WithoutFadeFromProps {
    41→  /**
      →…
    50→export type DialogProps …
   139→export function Root({
   140→  open: openProp,
   141→  onOpenChange,
      →…
   803→export const Overlay …
   831→export type ContentProps …
   833→export const Content …
   989→export type HandleProps …
   993→const LONG_HANDLE_PRESS_TIMEOUT = 250;
   994→const DOUBLE_TAP_TIMEOUT = 120;
   996→export const Handle …
  1098→export function NestedRoot({ onDrag, onOpenChange, open: nestedIsOpen, ...rest }: DialogProps) {
  1099→  const { onNestedDrag, onNestedOpenChange, onNestedRelease } = useDrawerContext();
  1100→
      →…
  1128→type PortalProps = React.ComponentPropsWithoutRef<typeof DialogPrimitive.Portal>;
  1130→export function Portal(props: PortalProps) {
  1131→  const context = useDrawerContext();
  1132→  const { container = context.container, ...portalProps } = props;
      →…
  1137→export const Drawer …
types.ts
     1→export type DrawerDirection = 'top' | 'bottom' | 'left' | 'right';
     2→export interface SnapPoint {
     3→  fraction: number;
     4→  height: number;
     5→}
     7→export type AnyFunction = (...args: any) => any;
use-composed-refs.ts
     5→type PossibleRef …
     7→/**
      →…
    11→function setRef<T>(ref: PossibleRef<T>, value: T) {
    19→/**
      →…
    23→function composeRefs<T>(...refs: PossibleRef<T>[]) {
    27→/**
      →…
    31→function useComposedRefs<T>(...refs: PossibleRef<T>[]) {
use-controllable-state.ts
     5→type UseControllableStateParams …
    11→type SetStateFn …
use-position-fixed.ts
     6→/**
     7→ * This hook is necessary to prevent buggy behavior on iOS devices (need to test on Android).
     8→ * I won't get into too much detail about what bugs it solves, but so far I've found that setting the body to `position: fixed` is the most reliable way to prevent those bugs.
     9→ * Issues that this hook solves:
    10→ * https://github.com/emilkowalski/vaul/issues/435
    11→ * https://github.com/emilkowalski/vaul/issues/433
    12→ * And more that I discovered, but were just not reported.
    13→ */
    14→
    15→export function usePositionFixed({
    16→  isOpen,
    17→  modal,
    18→  nested,
    19→  hasBeenOpened,
    20→  preventScrollRestoration,
    21→  noBodyStyles,
    22→}: {
      →…
use-prevent-scroll.ts
     6→const KEYBOARD_BUFFER …
     8→export const useIsomorphicLayoutEffect = typeof window !== 'undefined' ? useLayoutEffect : useEffect;
    10→interface PreventScrollOptions {
    11→  /** Whether the scroll lock is disabled. */
    12→  isDisabled?: boolean;
      →…
    27→const visualViewport …
    47→const nonTextInputTypes …
    63→/**
    64→ * Prevents scrolling on the document body on mount, and
    65→ * restores it on unmount. Also ensures that content does not
    66→ * shift due to the scrollbars disappearing.
    67→ */
    68→export function usePreventScroll(options: PreventScrollOptions = {}) {
    69→  let { isDisabled } = options;
    70→
    71→  useIsomorphicLayoutEffect(() => {
    72→    if (isDisabled) {
    73→      return;
    74→    }
    75→
      →…
