tests/snapshots/snapshots__budget_xxhash_4000.snap
---
source: tests/snapshots.rs
expression: output
---
budget: 4000 (4048 tokens)

README.md
     1→# xxhash
     6→xxhash is a Go implementation of the 64-bit [xxHash] algorithm, XXH64. This is a
     7→high-quality hashing algorithm that is much faster than anything in the Go
     8→standard library.
     9→
    10→This package provides a straightforward API:
    11→
    12→```
    13→func Sum64(b []byte) uint64
    14→func Sum64String(s string) uint64
    15→type Digest struct{ ... }
    16→    func New() *Digest
    17→```
    18→
    19→The `Digest` type implements hash.Hash64. Its key methods are:
    20→
    21→```
    22→func (*Digest) Write([]byte) (int, error)
    23→func (*Digest) WriteString(string) (int, error)
    24→func (*Digest) Sum64() uint64
    25→```
    26→
    27→The package is written with optimized pure Go and also contains even faster
    28→assembly implementations for amd64 and arm64. If desired, the `purego` build tag
    29→opts into using the Go code even on those architectures.
    30→
    31→[xxHash]: https://xxhash.com/
    32→
    33→## Compatibility
    35→This package is in a module and the latest code is in version 2 of the module.
    36→You need a version of Go with at least "minimal module compatibility" to use
    37→github.com/cespare/xxhash/v2:
    38→
    39→* 1.9.7+ for Go 1.9
    40→* 1.10.3+ for Go 1.10
    41→* Go 1.11 or later
    42→
    43→I recommend using the latest release of Go.
    44→
    45→## Benchmarks
    47→Here are some quick benchmarks comparing the pure-Go and assembly
    48→implementations of Sum64.
    49→
    50→| input size | purego    | asm       |
    51→| ---------- | --------- | --------- |
    52→| 4 B        |  1.3 GB/s |  1.2 GB/s |
    53→| 16 B       |  2.9 GB/s |  3.5 GB/s |
    54→| 100 B      |  6.9 GB/s |  8.1 GB/s |
    55→| 4 KB       | 11.7 GB/s | 16.7 GB/s |
    56→| 10 MB      | 12.0 GB/s | 17.3 GB/s |
    57→
    58→These numbers were generated on Ubuntu 20.04 with an Intel Xeon Platinum 8252C
    59→CPU using the following commands under Go 1.19.2:
    60→
    61→```
    62→benchstat <(go test -tags purego -benchtime 500ms -count 15 -bench 'Sum64$')
    63→benchstat <(go test -benchtime 500ms -count 15 -bench 'Sum64$')
    64→```
    65→
    66→## Projects using this package
    68→- [InfluxDB](https://github.com/influxdata/influxdb)
    69→- [Prometheus](https://github.com/prometheus/prometheus)
    70→- [VictoriaMetrics](https://github.com/VictoriaMetrics/VictoriaMetrics)
    71→- [FreeCache](https://github.com/coocood/freecache)
    72→- [FastCache](https://github.com/VictoriaMetrics/fastcache)
    73→- [Ristretto](https://github.com/dgraph-io/ristretto)
    74→- [Badger](https://github.com/dgraph-io/badger)

bench_test.go
     3→import …
     8→var benchmarks = []struct {
    19→func BenchmarkSum64(b *testing.B) {
    34→func BenchmarkSum64String(b *testing.B) {
    46→func BenchmarkDigestBytes(b *testing.B) {
    63→func BenchmarkDigestString(b *testing.B) {

dynamic/dynamic_test.go
     6→import …
    15→// This is a cursory test that checks whether things work under dynamic linking.
    17→func TestMain(m *testing.M) {
    18→	cmd := exec.Command(
    19→		"go", "build",
    20→		"-buildmode", "plugin",
    21→		"-o", "plugin.so",
    22→		"plugin.go",
    23→	)
    24→	var out bytes.Buffer
    25→	cmd.Stdout = &out
      →	…
    33→func TestDynamic(t *testing.T) {
    34→	plug, err := plugin.Open("plugin.so")
    35→	if err != nil {
    36→		t.Fatal(err)
    37→	}
      →	…

dynamic/plugin.go
     6→import (
     7→	"fmt"
     8→	"log"
     9→	"testing"
    10→
    11→	"github.com/cespare/xxhash/v2"
    12→)
    14→const (
    15→	in   = "Call me Ishmael. Some years ago--never mind how long precisely-"
    16→	want = uint64(0x02a2e85470d6fd96)
    19→func TestSum(t *testing.T) {
    20→	got := xxhash.Sum64String(in)
    21→	if got != want {
    22→		t.Fatalf("Sum64String: got 0x%x; want 0x%x", got, want)
    23→	}
    24→}
    26→func TestDigest(t *testing.T) {
    27→	for chunkSize := 1; chunkSize <= len(in); chunkSize++ {
    28→		name := fmt.Sprintf("[chunkSize=%d]", chunkSize)
    29→		t.Run(name, func(t *testing.T) {
    30→			d := xxhash.New()
    31→			for i := 0; i < len(in); i += chunkSize {
    32→				chunk := in[i:]
    33→				if len(chunk) > chunkSize {
    34→					chunk = chunk[:chunkSize]
    35→				}
    36→				n, err := d.WriteString(chunk)
    37→				if err != nil || n != len(chunk) {
    38→					t.Fatalf("Digest.WriteString: got (%d, %v); want (%d, nil)",
    39→						n, err, len(chunk))
    40→				}
    41→			}
    42→			if got := d.Sum64(); got != want {
      →			…

xxhash.go
     5→import (
     6→	"encoding/binary"
     7→	"errors"
     8→	"math/bits"
     9→)
    11→const (
    12→	prime1 uint64 = 11400714785074694791
    13→	prime2 uint64 = 14029467366897019727
    14→	prime3 uint64 = 1609587929392839161
    15→	prime4 uint64 = 9650029242287828579
    16→	prime5 uint64 = 2870177450012600261
    19→// Store the primes in an array as well.
    20→//
    21→// The consts are used when possible in Go code to avoid MOVs but we need a
    22→// contiguous array for the assembly code.
    23→var primes = [...]uint64{prime1, prime2, prime3, prime4, prime5}
    25→// Digest implements hash.Hash64.
    26→//
    27→// Note that a zero-valued Digest is not ready to receive writes.
    28→// Call Reset or create a Digest using New before calling other methods.
    29→type Digest struct {
    30→	v1    uint64
    31→	v2    uint64
    32→	v3    uint64
    33→	v4    uint64
    34→	total uint64
    35→	mem   [32]byte
    36→	n     int // how much of mem is used
    37→}
    39→// New creates a new Digest with a zero seed.
    40→func New() *Digest {
    41→	return NewWithSeed(0)
    42→}
    44→// NewWithSeed creates a new Digest with the given seed.
    45→func NewWithSeed(seed uint64) *Digest {
    46→	var d Digest
    47→	d.ResetWithSeed(seed)
    48→	return &d
      →	…
    51→// Reset clears the Digest's state so that it can be reused.
    52→// It uses a seed value of zero.
    53→func (d *Digest) Reset() {
    54→	d.ResetWithSeed(0)
    55→}
    57→// ResetWithSeed clears the Digest's state so that it can be reused.
    58→// It uses the given seed to initialize the state.
    59→func (d *Digest) ResetWithSeed(seed uint64) {
    60→	d.v1 = seed + prime1 + prime2
    61→	d.v2 = seed + prime2
    62→	d.v3 = seed
      →	…
    68→// Size always returns 8 bytes.
    69→func (d *Digest) Size() int { return 8 }
    71→// BlockSize always returns 32 bytes.
    72→func (d *Digest) BlockSize() int { return 32 }
    74→// Write adds more data to d. It always returns len(b), nil.
    75→func (d *Digest) Write(b []byte) (n int, err error) {
    76→	n = len(b)
    77→	d.total += uint64(n)
    78→
      →…
   112→// Sum appends the current hash to b and returns the resulting slice.
   113→func (d *Digest) Sum(b []byte) []byte {
   114→	s := d.Sum64()
   115→	return append(
   116→		b,
      →		…
   128→// Sum64 returns the current hash.
   129→func (d *Digest) Sum64() uint64 {
   130→	var h uint64
   131→
   132→	if d.total >= 32 {
      →	…
   170→const (
   171→	magic         = "xxh\x06"
   172→	marshaledSize = len(magic) + 8*5 + 32
   175→// MarshalBinary implements the encoding.BinaryMarshaler interface.
   176→func (d *Digest) MarshalBinary() ([]byte, error) {
   177→	b := make([]byte, 0, marshaledSize)
   178→	b = append(b, magic...)
   179→	b = appendUint64(b, d.v1)
      →	…
   189→// UnmarshalBinary implements the encoding.BinaryUnmarshaler interface.
   190→func (d *Digest) UnmarshalBinary(b []byte) error {
   191→	if len(b) < len(magic) || string(b[:len(magic)]) != magic {
   192→		return errors.New("xxhash: invalid hash state identifier")
   193→	}
      →	…
   208→func appendUint64 …
   214→func consumeUint64 …
   219→func u64 …
   220→func u32 …
   222→func round …
   229→func mergeRound …
   236→func rol1 …
   237→func rol7 …
   238→func rol11 …
   239→func rol12 …
   240→func rol18 …
   241→func rol23 …
   242→func rol27 …
   243→func rol31 …

xxhash_asm.go
     9→// Sum64 computes the 64-bit xxHash digest of b with a zero seed.
    10→//
    11→//go:noescape
    12→func Sum64(b []byte) uint64
    14→//go:noescape
    15→func writeBlocks(d *Digest, b []byte) int

xxhash_other.go
     6→// Sum64 computes the 64-bit xxHash digest of b with a zero seed.
     7→func Sum64(b []byte) uint64 {
     8→	// A simpler version would be
     9→	//   d := New()
    10→	//   d.Write(b)
      →	…
    64→func writeBlocks …

xxhash_safe.go
     8→// Sum64String computes the 64-bit xxHash digest of s with a zero seed.
     9→func Sum64String(s string) uint64 {
    10→	return Sum64([]byte(s))
    11→}
    13→// WriteString adds more data to d. It always returns len(s), nil.
    14→func (d *Digest) WriteString(s string) (n int, err error) {
    15→	return d.Write([]byte(s))
    16→}

xxhash_test.go
     3→import …
    12→func TestAll(t *testing.T) {
    58→func testDigest …
    88→func testSum …
    97→func TestReset(t *testing.T) {
   114→func TestResetWithSeed(t *testing.T) {
   131→func TestBinaryMarshaling(t *testing.T) {
   168→var sink uint64
   170→func TestAllocs(t *testing.T) {
   193→func testAllocs …

xxhash_unsafe.go
     9→import (
    10→	"unsafe"
    11→)
    36→// Sum64String computes the 64-bit xxHash digest of s with a zero seed.
    37→// It may be faster than Sum64([]byte(s)) by avoiding a copy.
    38→func Sum64String(s string) uint64 {
    39→	b := *(*[]byte)(unsafe.Pointer(&sliceHeader{s, len(s)}))
    40→	return Sum64(b)
    41→}
    43→// WriteString adds more data to d. It always returns len(s), nil.
    44→// It may be faster than Write([]byte(s)) by avoiding a copy.
    45→func (d *Digest) WriteString(s string) (n int, err error) {
    46→	d.Write(*(*[]byte)(unsafe.Pointer(&sliceHeader{s, len(s)})))
    47→	// d.Write always returns len(s), nil.
    48→	// Ignoring the return output and returning these fixed values buys a
      →	…
    53→// sliceHeader is similar to reflect.SliceHeader, but it assumes that the layout
    54→// of the first two words is the same as the layout of a string.
    55→type sliceHeader struct {
    56→	s   string
    57→	cap int
    58→}

xxhash_unsafe_test.go
     6→import …
    13→func TestStringAllocs(t *testing.T) {
    29→// This test is inspired by the Go runtime tests in https://go.dev/cl/57410.
    30→// It asserts that certain important functions may be inlined.
    31→func TestInlining(t *testing.T) {
    32→	funcs := map[string]struct{}{
    33→		"Sum64String":           {},
    34→		"(*Digest).WriteString": {},
    35→	}
    36→
      →…

xxhashbench/xxhashbench_test.go
     3→import …
    14→// TODO: The main benchmarks live in the xxhash package now, so the only purpose
    15→// of this is to compare different hash functions. Consider deleting xxhashbench
    16→// or replacing it with a more minimal comparison.
    18→var sink uint64
    20→var benchmarks = []struct {
   108→func BenchmarkHashes(b *testing.B) {
   109→	for _, bb := range benchmarks {
   110→		for _, benchSize := range []struct {
   111→			name string
   112→			n    int
   113→		}{
      →		…
   152→func benchmarkHashBytes(b *testing.B, input []byte, fn func([]byte) uint64) {
   159→func benchmarkHashString(b *testing.B, input string, fn func(string) uint64) {

xxhsum/xxhsum.go
     3→import (
     4→	"fmt"
     5→	"io"
     6→	"os"
     7→
     8→	"github.com/cespare/xxhash/v2"
     9→)
    11→func main() {
    12→	if contains(os.Args[1:], "-h") {
      →	…
    34→func contains(ss []string, s string) bool {
    35→	for _, s1 := range ss {
      →	…
    43→func printHash(r io.Reader, name string) {
    44→	h := xxhash.New()
      →	…
